# continuity

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
crates/app/: Cargo.toml  README.md  build.rs
crates/app/assets/: continuity.rc
crates/app/src/: error.rs  main.rs  main_initial_requests.rs  registry.rs  registry_build.rs  registry_closed_history.rs  registry_file_buffers.rs  registry_open_file.rs  registry_time.rs  runtime_paths.rs  single_instance.rs
crates/buffer/: Cargo.toml  README.md
crates/buffer/src/: buffer.rs  checksum.rs  error.rs  id.rs  inverse_op.rs  lib.rs  metadata.rs  revision.rs  selection_clamp.rs  snapshot.rs  undo.rs
crates/command/: Cargo.toml  README.md
crates/command/assets/: tutorial.md
crates/command/src/: buffer_history.rs  clipboard.rs  context.rs  diagnostics.rs  edit_config_context.rs  editor.rs  editor_extras.rs  error.rs  file.rs  file_context.rs  find_context.rs  help.rs  id.rs  indent.rs  lib.rs  markdown.rs  markdown_inserters.rs  markdown_links_clipboard.rs  motion_extras.rs  panes.rs  predicate.rs  registry.rs  search.rs  selection.rs  settings.rs  spell.rs  tabs.rs  theme.rs  undo.rs  view.rs  view_context.rs  view_modes.rs  view_timeline_metrics.rs  windows.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: autocorrect.rs  effective_autocorrect.rs  error.rs  focus.rs  lib.rs  markdown_paths.rs  mode.rs  settings.rs  settings_backup.rs  settings_markdown.rs  settings_window.rs  smart_typography.rs  validate.rs  watcher.rs  workers.rs  zoom.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: clock.rs  dispatch.rs  edit_indent_shift.rs  edit_indent_subtree.rs  edit_inline.rs  edit_line_text.rs  edit_line_text_helpers.rs  edit_lines.rs  edit_lines_movement.rs  edit_list.rs  edit_markdown.rs  edit_markdown_blocks.rs  edit_markdown_strip.rs  edit_normalize.rs  edit_pairs.rs  edit_planning.rs  edit_words.rs  error.rs  handle.rs  indent_fold_provider.rs  lib.rs  markdown_heading_fold_provider.rs  message.rs  policy.rs  rope_edit_delta_points.rs  selection_coalesce.rs  selection_edit.rs  state.rs  trace.rs  undo.rs  wpm.rs
crates/decorate/: Cargo.toml  README.md
crates/decorate/src/: autolink.rs  cache.rs  decorations.rs  decorations_diff.rs  decorations_incremental.rs  decorations_memory.rs  decorations_transform.rs  error.rs  focus_span.rs  footnotes.rs  heading_task_progress.rs  headings.rs  image_link.rs  inline.rs  inline_color.rs  inline_text.rs  language.rs  lib.rs  parser.rs  pool.rs  rainbow.rs  request_queue.rs  sections.rs  spans.rs  syntax.rs  table_block_fixup.rs  table_eval.rs  table_formula.rs  table_formula_parser.rs  tables.rs  toc.rs  tree_cache.rs  tree_sitter_alloc.rs  worker_watchdog.rs
crates/display_map/: Cargo.toml  README.md
crates/display_map/src/: backslash_escape_provider.rs  builder.rs  error.rs  fold.rs  id.rs  image_row_reservation_provider.rs  lib.rs  line.rs  map.rs  markdown_toggles.rs  row_index.rs  row_index_fenwick.rs  segment.rs  segment_cache.rs  style.rs  table_hide_provider.rs  wrap.rs  wrap_cache.rs  wrap_profile.rs
crates/input/: Cargo.toml  README.md
crates/input/src/: chord.rs  error.rs  lib.rs
crates/keymap/: Cargo.toml  README.md
crates/keymap/assets/: default.toml
crates/keymap/src/: binding.rs  conflict.rs  error.rs  keymap.rs  lib.rs
crates/layout/: Cargo.toml  README.md
crates/layout/src/: cache.rs  error.rs  factory.rs  lib.rs  run_cache.rs  view_state.rs
crates/persist/: Cargo.toml  README.md
crates/persist/src/: backup.rs  budget.rs  buffer_history.rs  buffer_listing.rs  checksum.rs  closed_history.rs  codec.rs  error.rs  events.rs  file_assoc.rs  handle.rs  handle_buffer_history.rs  handle_buffer_listing.rs  handle_metrics.rs  handle_snapshots.rs  handle_timeline.rs  lib.rs  message.rs  metrics.rs  paths.rs  persist_loop.rs  recover.rs  schema.rs  store.rs  timeline.rs  trace.rs  window_state.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: breadcrumb.rs  buffer_history_panel.rs  chrome.rs  chrome_caret.rs  chrome_centered.rs  chrome_command_list.rs  chrome_fold.rs  chrome_indent_guides.rs  chrome_line_numbers.rs  chrome_post.rs  code_copy_button_paint.rs  decoration_paint.rs  display_projection.rs  edit_pulse_paint.rs  error.rs  file_tree.rs  file_tree_paint.rs  focus_dim.rs  image_cache.rs  image_layout.rs  image_paint.rs  inline_code_hit.rs  inline_code_paint.rs  inline_color_paint.rs  inline_image_types.rs  jump_glow_paint.rs  lib.rs  line_bands.rs  loading_overlay.rs  markdown_extension_paint.rs  metrics_panel.rs  metrics_panel_paint.rs  minimap.rs  minimap_paint.rs  motion.rs  outline.rs  outline_paint.rs  overlay.rs  overlay_motion.rs  overlay_scrollbar.rs  (+39 more)
crates/search/: Cargo.toml  README.md
crates/search/src/: dispatcher.rs  error.rs  fuzzy.rs  index.rs  lib.rs  literal.rs  regex.rs
crates/test_support/: Cargo.toml  README.md
crates/test_support/src/: clock.rs  fixtures.rs  gen.rs  lib.rs  percentiles.rs  win32_harness.rs
crates/text/: Cargo.toml  README.md
crates/text/src/: bidi.rs  edit.rs  error.rs  lib.rs  position.rs  range.rs  rope_edit_delta.rs  select.rs  selection.rs
crates/theme/: Cargo.toml  README.md
crates/theme/assets/: catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  deep_minimal.toml  dracula.toml  gruvbox_dark.toml  gruvbox_light.toml  monokai.toml  nord.toml  one_dark.toml  paper.toml  rose_pine.toml  solarized_dark.toml  solarized_darker.toml  solarized_light.toml  tokyo_night.toml
crates/theme/src/: assets.rs  color.rs  error.rs  keys.rs  lib.rs  mode.rs  sanitize.rs  serialize.rs  theme.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: buffer_history_tab.rs  (+230 more)
crates/win/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: analyze_trace.rs  analyze_trace_memory_sections.rs  analyze_trace_sections.rs  bench.rs  conventions.rs  conventions_b_rules.rs  conventions_identifier_rules.rs  docs_gen.rs  installer.rs  main.rs  perf_history.rs  release.rs  scan.rs  tutorial_gen.rs
(+233 files in other folders)
