[package]
name             = "xtask"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
anyhow             = { workspace = true }
continuity-command = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
