[package]
name             = "continuity-config"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
toml              = { workspace = true }
serde             = { workspace = true }
notify            = { workspace = true }
thiserror         = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tempfile          = { workspace = true }
crossbeam-channel = { workspace = true }
