[package]
name             = "continuity-core"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
continuity-text     = { workspace = true }
continuity-buffer   = { workspace = true }
continuity-persist  = { workspace = true }
continuity-trace    = { workspace = true }
ropey               = { workspace = true }
crossbeam-channel   = { workspace = true }
ahash               = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
continuity-test-support = { workspace = true }
tempfile                = { workspace = true }
