[package]
name             = "continuity-render"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
continuity-layout      = { workspace = true }
continuity-decorate    = { workspace = true }
continuity-display-map = { workspace = true }
continuity-buffer      = { workspace = true }
continuity-text        = { workspace = true }
continuity-win         = { workspace = true }
ropey                  = { workspace = true }
ahash                  = { workspace = true }
windows           = { workspace = true, features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_Com",
] }
thiserror         = { workspace = true }

[dev-dependencies]
continuity-test-support = { workspace = true }
# §H3 — integration tests cross core's indent-fold provider into
# render's display projection. Test-only dep; production render does
# NOT depend on core (the layer graph forbids render → core).
continuity-core         = { workspace = true }
continuity-decorate     = { workspace = true }
blake3                  = { workspace = true }
png                     = { workspace = true }
tempfile                = { workspace = true }
