[package]
name             = "continuity-search"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
continuity-buffer = { workspace = true }
grep-matcher      = { workspace = true }
grep-regex        = { workspace = true }
grep-searcher     = { workspace = true }
memchr            = { workspace = true }
regex-syntax      = { workspace = true }
rusqlite          = { workspace = true }
uuid              = { workspace = true }
thiserror         = { workspace = true }
