[package]
name             = "continuity-theme"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
toml      = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
