[package]
name             = "continuity-win"
version          = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }
thiserror = { workspace = true }
